--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -1,4 +1,4 @@
-en:
+'pt-BR':
   activerecord:
     models:
       admin:
@@ -11,10 +11,14 @@ en:
       admin:
         id: Código
         email: Email
+        password: Senha
+        password_confirmation: Confirmação da Senha
         created_at: Criado em
         updated_at: Atualizado em
       user:
         id: Código
         email: Email
+        password: Senha
+        password_confirmation: Confirmação da Senha
         created_at: Criado em
         updated_at: Atualizado em
